PROJECT(Hangman)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules")
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(assimp REQUIRED)
FIND_PACKAGE(ImageMagick COMPONENTS Magick++)
FIND_PACKAGE(Bullet REQUIRED)
FIND_PACKAGE(OpenAL REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)

SET(CXX11_FLAGS -std=gnu++11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
SET(TARGET_LIBRARIES "${OPENGL_LIBRARY} ${SDL2_LIBRARY} ${ASSIMP_LIBRARIES} ${OPENAL_LIBRARY} ${GLUT_LIBRARY}")

add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=16)
add_definitions(-DMAGICKCORE_HDRI_ENABLE=0)

IF(UNIX)
  ADD_DEFINITIONS(-DUNIX -lopenal -lassimp -g)
ENDIF(UNIX)

IF(NOT APPLE)
    IF(FREETYPE_FOUND)
        INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
    ENDIF(FREETYPE_FOUND)
    IF(GLUT_FOUND)
        INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS})
        LINK_LIBRARIES(${GLUT_LIBRARY})
    ENDIF(GLUT_FOUND)

  IF(GLEW_FOUND)
      INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
      LINK_LIBRARIES(${GLEW_LIBRARIES})
  ENDIF(GLEW_FOUND)

  IF(assimp_FOUND)
      INCLUDE_DIRECTORIES(${assimp_INCLUDE_DIRS})
      LINK_LIBRARIES(${assimp_LIBRARIES})
  ENDIF(assimp_FOUND)

  IF(OPENAL_FOUND)
      INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
      LINK_LIBRARIES(${OPENAL_LIBRARY})
  ENDIF()
ENDIF(NOT APPLE)

INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}/include"
    ${SDL2_INCLUDE_DIR}
    ${GLM_INCLUDE_DIRS}
    ${assimp_INCLUDE_DIRS}
    ${ImageMagick_INCLUDE_DIRS}
    ${BULLET_INCLUDE_DIRS}
    ${OPENAL_INCLUDE_DIR}
    ${GLUT_INCLUDE_DIRS}
)


# Set Includes
SET(INCLUDES ${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${INCLUDES})

# Set sources
FILE(GLOB_RECURSE SOURCES "src/*.cpp")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} src/audio.cpp include/audio.hpp)

add_custom_target("${PROJECT_NAME}_SUCCESSFUL" ALL
                  DEPENDS ${PROJECT_NAME}
                  COMMAND ${CMAKE_COMMAND} -E echo ""
                  COMMAND ${CMAKE_COMMAND} -E echo "====================="
                  COMMAND ${CMAKE_COMMAND} -E echo "  Compile complete!"
                  COMMAND ${CMAKE_COMMAND} -E echo "====================="
                  COMMAND ${CMAKE_COMMAND} -E echo "${CMAKE_CURRENT_BINARY_DIR}"
                 )
                 
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARY} ${SDL2_LIBRARY} ${ASSIMP_LIBRARY} ${ImageMagick_LIBRARIES} ${BULLET_LIBRARIES} ${OPENAL_LIBRARY} ${GLUT_LIBRARY})
